Bug 154039 - LO crashes when navigating in Special Characters dialog table with NVDA screen reader enabled
Summary: LO crashes when navigating in Special Characters dialog table with NVDA scree...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.6.0 target:7.4.7 target:7.5.2
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2023-03-07 10:33 UTC by Michael Weghorn
Modified: 2023-03-08 08:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2023-03-07 10:33:24 UTC
Steps to reproduce:

1) start NVDA (here: version 2022.4)
2) start LO Writer
3) open the Special Characters dialog: "Insert" -> "Special Character"
4) press Tab key until the table of characters has focus
5) press the "arrow right" button a few times to select other entries
6) press the "arrow left" button a few times to move back to the original entry

Result: Crash

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3950df2b87f4657f196d56828a782e66c86ff790
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

No crash on Linux.
Comment 1 Michael Weghorn 2023-03-07 10:34:21 UTC
This is a regression, bibisected to:

    commit 00c0ee8cf0fac0c933c5ae600e99a64b1c7d4397
    Author: Michael Weghorn <m.weghorn@posteo.de>
    Date:   Mon Jan 31 07:41:14 2022 +0000

        tdf#147083 wina11y: Return a11y object instead of child ID
Comment 2 Michael Weghorn 2023-03-07 10:39:49 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/148393
Comment 3 Commit Notification 2023-03-07 14:47:46 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/38e2dde00da0207c5f7157bb427a006d32dfeb5b

tdf#154039 wina11y: Increase refcount for returned COM interface

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Weghorn 2023-03-07 14:49:20 UTC
Fixed in master, backports for 7-5 and 7-4 pending in Gerrit:
https://gerrit.libreoffice.org/c/core/+/148399
https://gerrit.libreoffice.org/c/core/+/148400
Comment 5 Commit Notification 2023-03-08 08:58:04 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/0d60b7914f4026cedf3455b79636fa108b05d432

tdf#154039 wina11y: Increase refcount for returned COM interface

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-03-08 08:58:07 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f7ae8fb0c612988a308b16284ce659e860e7ad99

tdf#154039 wina11y: Increase refcount for returned COM interface

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.