tdf#154039 wina11y: Increase refcount for returned COM interface

The reference counter for the IUnknown interface
of the COM object needs to be increased in
`CMAccessible::get_accSelection` as well,
not just in the called `CEnumVariant::Next`,
because calling VariantClear` on the temporary
variant afterwards decreases the ref count again.

Regression from

    commit 00c0ee8cf0fac0c933c5ae600e99a64b1c7d4397
    Author: Michael Weghorn <m.weghorn@posteo.de>
    Date:   Mon Jan 31 07:41:14 2022 +0000

        tdf#147083 wina11y: Return a11y object instead of child ID

Change-Id: Id968c3d80b38961b836fbb1a9bd6dfeefdff813f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148393
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 38e2dde00da0207c5f7157bb427a006d32dfeb5b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148399
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>